RESOLVED FIXED202578
A service worker process should not be created when enqueuing a service worker job
https://bugs.webkit.org/show_bug.cgi?id=202578
Summary A service worker process should not be created when enqueuing a service worke...
youenn fablet
Reported 2019-10-04 04:53:45 PDT
This is too early. In some cases, the jobs will never need the service worker process.
Attachments
Patch (5.54 KB, patch)
2019-10-04 05:04 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-04 04:54:01 PDT
youenn fablet
Comment 2 2019-10-04 05:04:13 PDT
Chris Dumez
Comment 3 2019-10-04 08:26:07 PDT
Comment on attachment 380213 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380213&action=review > Source/WebKit/ChangeLog:3 > + A service worker process should not be created when enqueuing a service worker job In what cases are we running a job but won't need a service worker process? Are those cases really common? Won't there be a potential performance cost to your change in the common case where we will end up needing this service worker process (since you are now effectively delaying its launch)?
youenn fablet
Comment 4 2019-10-04 08:31:53 PDT
(In reply to Chris Dumez from comment #3) > Comment on attachment 380213 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=380213&action=review > > > Source/WebKit/ChangeLog:3 > > + A service worker process should not be created when enqueuing a service worker job > > In what cases are we running a job but won't need a service worker process? There is some information in the rdar about that. We only need the process for jobs that will end up installing a service worker. > Are those cases really common? Won't there be a potential performance cost > to your change in the common case where we will end up needing this service > worker process (since you are now effectively delaying its launch)? We do not delay anything for time sensitive cases (fetch and postMessage). We slightly delay for the install case but I do not think this step is very time sensitive since it already requires grabbing a script, running it, calling a bunch of service worker event handlers...
youenn fablet
Comment 5 2019-10-09 04:08:54 PDT
Ping review
WebKit Commit Bot
Comment 6 2019-10-09 23:59:21 PDT
Comment on attachment 380213 [details] Patch Clearing flags on attachment: 380213 Committed r250957: <https://trac.webkit.org/changeset/250957>
WebKit Commit Bot
Comment 7 2019-10-09 23:59:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.