A service worker process should not be created when enqueuing a service worker job https://bugs.webkit.org/show_bug.cgi?id=202578 <rdar://problem/55979690>

Reviewed by Chris Dumez.

Source/WebCore:

Ask for a service worker context connection when planning to install or run a service worker.
This allows to not spin unnecessarily service worker processes for jobs that do not end up installing a service worker.

Covered by existing tests.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::tryInstallContextData):
(WebCore::SWServer::runServiceWorkerIfNecessary):

Source/WebKit:

Remove the calls to create service worker context connection.
They are now done at SWServer level when trying to either run a service worker or install one.

* NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
(WebKit::WebSWServerConnection::startFetch):
(WebKit::WebSWServerConnection::postMessageToServiceWorker):
(WebKit::WebSWServerConnection::scheduleJobInServer):


Canonical link: https://commits.webkit.org/216247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250957 268f45cc-cd09-0410-ab3c-d52691b4dbfc